# development

./: .bzrignore  .gitignore  CMakeLists.txt  LICENSE  README.TXT  README.md  RoboLibCore.h  RoboLibVision.h  SConscript  SConstruct  auto_action.lua  build.py  compilers.py  configure.lua  construction.scons  envBuilder.py  premake4.lua  puppybot.service  robolib.files  robolib.includes  ubuntu_apt_requirements.txt  utils.py
apps/builds/: configure.lua  configure_arm.lua  premake4.lua
apps/src/puppybot/: PuppybotClient.cpp  PuppybotClient.h  PuppybotServer.cpp  PuppybotServer.h  client.cpp  server.cpp
builds/: configure.lua  configure_android.lua  configure_arm.lua  premake4.lua
camera_capture/: Dc1394Camera.h  UnicapCamera.cpp  UnicapCamera.h
cmake/Modules/: FindVIDEOLIB.cmake  FindVideoLib.cmake
free_type_cpp/: SConscript
free_type_cpp/include/: FreeTypeCpp.h
free_type_cpp/src/: Cache.cpp  Cache.h  Face.cpp  Face.h  Glyph.cpp  Glyph.h  Library.cpp  Library.h  Measure.cpp  Measure.h  Utility.cpp  Utility.h  ft_exports.h
include/: RoboLib.h  RoboLibCore.h  RoboLibVision.h  VideoLib.h
io/: Socket.h
io/linux/: Joystick.cpp  Joystick.h  SerialPort.cpp  SerialPort.h
io/win32/: SerialPort.h
lua/: Luabot.cpp  Luabot.h
motor_control/: MotionMind.cpp  MotionMind.h
puppybot_control_app/: settings.gradle
puppybot_control_app/FFmpegJNI/: build.gradle
puppybot_control_app/app/: build.gradle
puppybot_control_app/gradle/wrapper/: gradle-wrapper.properties
robolib/: README.md
robolib/docs/: doxygen_config.dox
robolib/include/: RoboLibCore.h  RoboLibOpenCv.h  RoboLibVision.h  RoboNetwork.h
robolib/src/io/: SerialPort.h
robolib/src/motor_control/: DiffDrive.h  DiffDriveConfig.cpp  DiffDriveConfig.h  JoystickControl.h  TeleJoystick.cpp
robolib/src/network/: AbstractSocket.h  Ipv4Address.h  TcpSocket.cpp
robolib/src/opencv/: opencv_utils.h
robolib/src/puppybot/: RobotClient.cpp  RobotServer.h  puppybot_comms.cpp  puppybot_test.cpp
robolib/src/robotcomms/: VideoClient.cpp  VideoClient.h
robolib/src/sensors/: ArduinoSensors.cpp  ArduinoSensors.h
robolib/src/sse/: ImageProcSse.h  VectorVector.cpp  VectorVectorSse.cpp
robolib/src/utility/: AsyncLooper.h  Timer.h
robolib/src/vision/: FastCornerSearch.h  FastCornerThread.h  ImageProcessing.cpp  ImageProcessing.h  ImageTypes.h  LoadBalancingCornerDetector.cpp  Pgm.h  (+1 more)
site_scons/: build.py  compilers.py  construction.scons  envBuilder.py
src/: CMakeLists.txt  Cache.cpp  Face.cpp  Glyph.cpp  Measure.cpp  Utility.cpp
src/camera_capture/: CameraCapture.h  Dc1394Camera.cpp  Dc1394Camera.h  UnicapCamera.cpp  UnicapCamera.h
src/io/: Ipv4Address.cpp  Ipv4Address.h  Serialisation.h  Socket.cpp  Socket.h  TcpSocket.cpp  UdpSocket.cpp  UdpSocket.h  VectorStream.h
src/io/linux/: Joystick.cpp  Joystick.h  SerialPort.cpp  SerialPort.h
src/io/win32/: SerialPort.cpp  SerialPort.h
src/lua/: Luabot.cpp  Luabot.h
src/motor_control/: DiffDrive.cpp  DiffDrive.h  DiffDriveConfig.cpp  DiffDriveConfig.h  JoystickControl.h  MotionMind.cpp  MotionMind.h  TeleJoystick.cpp  TeleJoystick.h
src/network/: AbstractSocket.h  Socket.cpp  Socket.h  UdpSocket.h
src/opencv/: opencv_utils.cpp  opencv_utils.h
src/packetcomms/: ComPacket.h  ComSubscriber.cpp  ComSubscriber.h  ControlMessage.h  IdManager.cpp  IdManager.h  PacketDemuxer.cpp  PacketDemuxer.h  PacketMuxer.cpp  PacketMuxer.h  PacketSubscriber.cpp  PacketSubscriber.h  PacketSubscription.cpp  PacketSubscription.h  SimpleQueue.h
src/puppybot/: ComCentre.cpp  ComCentre.h  ComPacket.h  ComSubscriber.cpp  ComSubscriber.h  PacketDemuxer.cpp  PacketDemuxer.h  PacketMuxer.cpp  PacketMuxer.h  PuppybotData.h  RobotClient.cpp  RobotClient.h  RobotServer.cpp  RobotServer.h  RunnableFunction.h  VideoClient.cpp  VideoClient.h  puppybot_comms.cpp  puppybot_test.cpp
src/robotcomms/: VideoClient.cpp  VideoClient.h
src/sse/: BatchOperations.h  BatchOperationsSse.cpp  ImageProc.cpp  ImageProcSse.cpp  VectorVector.h  VectorVectorSse.h
src/sse/test/: main.cpp
src/tests/: CMakeLists.txt  RobotServer.cpp  RobotServer.h  comms_test.cpp  joystick_test.cpp  robo_test.cpp
src/tests/tools/: PacketStreaming.cpp  VideoStreaming.cpp  capture.cpp  transcode.cpp
src/tests/unit/: ImageTests.cpp  MockSockets.h  NetworkingTests.cpp  NetworkingTests.h  PacketCommsTests.cpp  PacketCommsTests.h  TestIo.cpp  UtilityTests.cpp  UtilityTests.h  VideoTests.cpp  VideoTests.h  gtests.cpp
src/utility/: AsyncLooper.h  RunnableFunction.h  SimpleAsyncFunction.h
src/video/: Capture.h  Dc1394Camera.cpp  FFmpegBufferIO.cpp  FFmpegBufferIO.h  FFmpegCustomIO.cpp  FFmpegCustomIO.h  FFmpegSocketIO.cpp  FFmpegSocketIO.h  FFmpegStdFunctionIO.cpp  FFmpegStdFunctionIO.h  FourCc.h  FrameConverter.cpp  FrameConverter.h  LibAvCapture.cpp  LibAvCapture.h  LibAvVideoStream.cpp  LibAvVideoStream.h  LibAvWriter.cpp  LibAvWriter.h  UnicapCamera.cpp  UnicapCamera.h  UnicapCapture.cpp  UnicapCapture.h  VideoFrame.cpp  VideoFrame.h  video_conversion.cpp  video_conversion.h
src/video_capture/: CameraCapture.h  Capture.h  Dc1394Camera.cpp  Dc1394Camera.h  FrameConverter.cpp  FrameConverter.h  LibAvCapture.cpp  LibAvCapture.h  LibAvVideoStream.cpp  LibAvVideoStream.h  LibAvWriter.cpp  LibAvWriter.h  UnicapCamera.cpp  UnicapCamera.h
src/vision/: FastCornerSearch.cpp  FastCornerThread.cpp  FastCornerThread.h  Image.h  ImageGeometry.h  ImageTypes.h  LoadBalancingCornerDetector.cpp  LoadBalancingCornerDetector.h  Pgm.cpp  Pgm.h
src/visualisation/: AnnotatedImage.h  ImageWindow.cpp  ImageWindow.h
sse/: BatchOperationsSse.h  ImageProc.h  SimdKernels.h
tests/: joystick_test.cpp
tools/builds/: configure.lua  premake4.lua
tools/camera_tool/: CameraCalibrationSystem.cpp  CameraCalibrationSystem.h  CameraWindow.cpp  CameraWindow.h  KltTracker.cpp  KltTracker.h  main.cpp  opencv_utils.h
tools/image-proc-lab/: main.cpp
tools/robo_script/: current-plot.lua  init-motors.lua  joy-control.lua  main.cpp  motor-plot.gri
videolib/: SConscript
videolib/docs/: doxygen_config.dox
videolib/include/: VideoLib.h
(+82 files in other folders)
